--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ keywords = ["sisu", "enem", "vestibular", "monitor"]
 dependencies = [
     "requests>=2.28.0",
     "pydantic>=2.0.0",
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.24.0",
+    "numpy>=1.24.0",
 ]
 
 [project.optional-dependencies]
