--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,17 @@
-# SISU 2025 Monitor - Dependencies
+# XTRI SISU 2026 - Python Dependencies
+
+# HTTP Client
 requests>=2.28.0
+
+# Data Validation
+pydantic>=2.0.0
+
+# API Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+
+# Data Processing
+numpy>=1.24.0
+
+# Database (optional - if using direct PostgreSQL)
+# psycopg2-binary>=2.9.0
