fix: remove user restriction from frontend Dockerfile

--- a/deploy/frontend/Dockerfile
+++ b/deploy/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# XTRI SISU 2026 - Frontend Dockerfile (Simplified)
+# XTRI SISU 2026 - Frontend Dockerfile (Fixed)
 FROM node:20-alpine AS base
 
 # Install dependencies only when needed
@@ -36,22 +36,15 @@ WORKDIR /app
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
 
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
 # Copy necessary files from builder
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
-
-# Fix permissions
-RUN chown -R nextjs:nodejs /app
-
-USER nextjs
 
 EXPOSE 3000
 
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
+# Run as root for now to avoid permission issues
 CMD ["node", "server.js"]
