--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,16 +11,10 @@ services:
       - "8001:8000"
     environment:
       - SUPABASE_URL=https://sisymqzxvuktdcbsbpbp.supabase.co
-      - SUPABASE_SERVICE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNpc3ltcXp4dnVrdGRjYnNicGJwIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc2ODYwNTk0MSwiZXhwIjoyMDg0MTgxOTQxfQ.yDWKET6qMOKukkFrRGL8UW4C4qK4BtcVmoJQpI2lG9o
+      - SUPABASE_SERVICE_KEY=${SUPABASE_SERVICE_KEY}
       - PYTHONUNBUFFERED=1
     networks:
       - coolify
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.xtrisisu-api.rule=Host(`api.xtrisisu.com`)"
-      - "traefik.http.routers.xtrisisu-api.entrypoints=http,https"
-      - "traefik.http.routers.xtrisisu-api.tls.certresolver=letsencrypt"
-      - "traefik.http.services.xtrisisu-api.loadbalancer.server.port=8000"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -44,18 +38,12 @@ services:
       - backend
     networks:
       - coolify
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.xtrisisu.rule=Host(`xtrisisu.com`) || Host(`www.xtrisisu.com`)"
-      - "traefik.http.routers.xtrisisu.entrypoints=http,https"
-      - "traefik.http.routers.xtrisisu.tls.certresolver=letsencrypt"
-      - "traefik.http.services.xtrisisu.loadbalancer.server.port=3000"
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000"]
-      interval: 30s
+      test: ["CMD", "wget", "--timeout=5", "--tries=1", "-qO-", "http://127.0.0.1:3000/"]
+      interval: 20s
       timeout: 10s
-      retries: 3
-      start_period: 40s
+      retries: 5
+      start_period: 30s
 
 networks:
   coolify:
